--- a/VolleyExample/app/src/main/res/values/strings.xml
+++ b/VolleyExample/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">VolleyExample</string>
+    <string name="editTextHint">Enter url here...</string>
+    <string name="editTextText">https://www.dnb.no/en</string>
+    <string name="getButton">Get Website</string>
 </resources>
